--- a/examples/group-chat/webroot/index.html
+++ b/examples/group-chat/webroot/index.html
@@ -37,7 +37,13 @@
     var DEFAULT_CHANNEL = "canal"
     var MUTE_AUDIO_BY_DEFAULT = false
 
-    var ICE_SERVERS = [{ urls: "stun:stun.l.google.com:19302" }]
+    var ICE_SERVERS = [
+        { urls: "stun:stun.l.google.com:19302" },
+        {urls:'stun:stun1.l.google.com:19302'},
+        {urls:'stun:stun2.l.google.com:19302'},
+        {urls:'stun:stun3.l.google.com:19302'},
+        {urls:'stun:stun4.l.google.com:19302'},
+    ]
 
     function join_chat_channel(channel, userdata) {
         signaling_socket.emit("join", { channel: channel, userdata: userdata })
