--- a/examples/file_upload/webroot/index.html
+++ b/examples/file_upload/webroot/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
 </head>
 <body>
 <br>
@@ -24,7 +29,8 @@ Status Messages:
 </body>
 <script>
     var blockSize = 1024 * 1024;
-    var ws = new WebSocket("ws://localhost:8084/upload");;
+    var ws = new WebSocket("ws://localhost:8084/upload");
+    ;
     var filePos;
     var file;
     var reader;
