--- a/examples/group-chat/webroot/index.html
+++ b/examples/group-chat/webroot/index.html
@@ -24,7 +24,10 @@
             bottom: 10px;
         }
     </style>
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <script src="js/socket.js"></script>
 </head>
 <body onload="init()"></body>
